--- a/.htaccess
+++ b/.htaccess
@@ -1223,4 +1223,4 @@ FileETag None
 #     RewriteRule ^(.+)\.(\w+)\.(bmp|css|cur|gif|ico|jpe?g|m?js|a?png|svgz?|webp|webmanifest)$ $1.$3 [L]
 # </IfModule>
 
-Header set Access-Control-Allow-Origin "http://localhost:50000/"
+AddType application/x-httpd-php .php
